# theboss

./: .gitignore  .gitmodules  Macieks_Approx.py  README.md  optional-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
BoSS/: __init__.py  quantum_computations_utilities.py
BoSS_Tomev/: __init__.py
quick_tests/: clifford_simulation_speed_test.py  haar_random_test_data.py  haar_random_tests.py
src/: BosonSamplingSimulator.py  Boson_Sampling_Utilities.py  ExactLossyBosonSamplingDistributionCalculator.py  LossyBosonSamplingExactDistributionCalculators.py  Quantum_Computations_Utilities.py  SimulationStrategyFactory.py  boson_sampling_simulator.py  quantum_computations_utilities.py  rpy2_utilities.py
src_tests/: __init__.py  common_code_for_tests.py  project_folder_path_updater.py  test_bs_permanent_calculators.py  test_effective_scattering_matrix_permanent_calculators.py  test_exact_distribution_calculator.py  test_fixed_losses_boson_sampling_simulator.py  test_generalized_cliffords_simulation_strategy.py  test_lossy_boson_sampling_simulator.py  test_network_simulation_strategies.py  test_quantum_computations_utilities.py  test_simulation_strategies.py  test_uniform_losses_boson_sampling_simulator.py
test/: exact_distribution_calculator_test.py  mode_permutation_test.py  simulation_test.py
tests/: __init__.py  gcc_based_strategies_tests_base.py  simulation_strategies_tests_common.py  test_2_sample_ks_bs_validator.py  test_bobs_strategy.py  test_boson_sampling_utilities.py  test_bs_distribution_calculators.py  test_bs_permanent_calculators.py  test_bs_submatrices_permanent_calculators.py  test_bs_submetrices_permanent_calculators.py  test_ccr_simulation_strategy.py  test_cluster_based_validator.py  test_distinguishable_bs_distribution_calculators.py  test_distinguishable_particles_distribution_calculators.py  test_distinguishable_particles_simulation_strategies.py  test_distinguishable_particles_simulation_strategies_tests.py  test_distribution_calculators.py  test_exact_distribution_calculator.py  test_full_approximation_simulation_strategies.py  test_gcc_strategies.py  test_gmf_strategy.py  test_likelihood_ratio_bs_validator.py  test_network_simulation_strategies.py  test_nonuniform_losses_simulation_strategies.py  test_quantum_computations_utilities.py  (+5 more)
(+168 files in other folders)
