[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name            = "BoSS"
authors         = [ {name = "Tomasz Rybotycki", email = "rybotycki.tomasz@gmail.com"},
                    {name = "Michal Oszmaniec", email= " "}]
readme          = "README.md"
license         = {file = "LICENSE.md"}
classifiers     = ["License :: OSI Approved :: Apache Software License"]
dynamic         = ["version", "description"]
dependencies    = ["numpy", "scipy"]


[project.optional-dependencies]
r = [
    "r-bosonsampling",
]

[project.urls]
Home = "https://github.com/Tomev-CTP/BoSS"
