[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name            = "theboss"
authors         = [ {name = "Tomasz Rybotycki", email = "rybotycki.tomasz@gmail.com"},
                    {name = "Michal Oszmaniec", email = "oszmaniec@cft.edu.pl"}]
mainteiners     = [{name = "Tomasz Rybotycki", email = "rybotycki.tomasz@gmail.com"}]
readme          = "README.md"
license         = {file = "LICENSE.md"}
classifiers     = ["License :: OSI Approved :: Apache Software License"]
dynamic         = ["version", "description"]
dependencies    = ["numpy", "scipy"]
requires-python = ">=3.6"  # Typing package (3.5 is no longer supported)


[project.optional-dependencies]
r = [
    "rpy2",
]

[project.urls]
Home = "https://github.com/Tomev-CTP/BoSS"
